<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">控制面板</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="activity_not_found">Activity not found!</string>
	<string name="permlab_read_settings">read Home settings and shortcuts</string>
	<string name="permdesc_read_settings">Allows an application to read the settings and shortcuts in Home.</string>
	<string name="permlab_write_settings">write Home settings and shortcuts</string>
	<string name="permdesc_write_settings">Allows an application to change the settings and shortcuts in Home.</string>
	<string name="gadget_error_text">Problem loading widget</string>
	<string name="out_of_space">No more room on this Home screen.</string>
	<string name="wallpaper_instructions">Set wallpaper</string>
	<string name="pick_wallpaper">Wallpapers</string>
	<string name="chooser_wallpaper">Select wallpaper from</string>
	<string name="startup_bar_title_1">Applications</string>
	<string name="startup_bar_title_2">Settings</string>
    <string name="startup_bar_title_3">File browser</string>
	<string name="startup_bar_title_4">Favorites</string>
	<string name="startup_bar_title_5">Web browser</string>
	<string name="add_favorites_app_success">add application to favorites list sucessfully</string>
	<string name="add_favorites_app">Add to favorites app list</string>
	<string name="del_favorites_app_success">delete application from favorites list sucessfully</string>
	<string name="delete_favorites_app">Delete from favorites app list</string>
	<string name="uninstall_app">Uninstall this application</string>
	<string name="add_widgets">Add widgets to workspace</string>
	<string name="del_widget">Delete widget from workspace</string>
	<string name="del_widget_dialog_instruct">Press up or down to select,press ok to delete widget.</string>
	<string name="set_the_wallpaper">Set the wallpaper</string>
	<string name="widget_picker_title">Choose widget</string>
	<string name="workspace_is_empty">Current workspace is empty</string>
	<string name="main_option_menu_title">Launcher menu</string>
	<string name="unknown">unknown</string>
    <string name="signal_strength">signal strength</string>
    <string name="security_level">security</string>
    <string name="password">password</string>
    <string name="show_password">show password</string>
    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="cancel">cancel</string>
    <string name="conn_status">conn status</string>
    <string name="ip_address">ip address</string>

    <string name="error_no_sdcard">No SD card, should not be stored data recording</string>
    <string name="error_state_record">Is the recording, please stop the recording</string>
    <string name="error_unknown">Unable to identify the error</string>
    <string name="app_btnyes">sure</string>
    <string name="app_btnno">cancel</string>
    <string name="scene_exists">Pro, you have choose the scenario!</string>
    <string name="bjt_title">background image replace</string>
    <string name="set_title">set</string>
    <string name="addsxt_title">add the camera</string>
    <string name="updatesxt_title">update the camera</string>
    <string name="config_name">curtain</string>
    <string name="curtaindetail_name">curtain</string>
    <string name="bjt_setup">The background to replace</string>
    <string name="controlcenter_mainmenu_setup2">Setup2</string>
    <string name="open">open</string>
    <string name="off">off</string>

    <!-- 灯光 -->
    <string name="light_title">light</string>

    <!-- 窗帘 -->
    <string name="curtain_title">curtain</string>

    <!-- 空调 -->
    <string name="aircondition_title">air condition</string>

    <!-- 电视机 -->
    <string name="tv_title">TV</string>

    <!-- 家庭影院 -->
    <string name="hometheatre_title">home theatre</string>

    <!-- 背景音乐 -->
    <string name="bgmusic_title">background music</string>

    <!-- 场景 -->
    <string name="scene_title">scene</string>

    <!-- 自定义场景 -->
    <string name="scenezdy_title">a custom scenario</string>
    <string name="scenezdy_ljcj">immediately create</string>

    <!-- 安防监控 -->
    <string name="securitymonitor_title">security and protection monitoring</string>
    <string name="save">save</string>
    <string name="videostar">video-star</string>
    <string name="GVS">GVS</string>
    <string name="scenezdy_sr">Please enter the name of scene</string>
    <string name="securitymonitor_monitorpreview_name"> Device name </string>
    <string name="securitymonitor_monitorpreview_pleasename">Please enter the device name</string>
    <string name="securitymonitor_monitorpreview_id">Equipment serial number</string>
    <string name="securitymonitor_monitorpreview_pleaseid">Please enter the device serial number</string>
    <string name="securitymonitor_monitorpreview_pwd">The device password</string>
    <string name="securitymonitor_monitorpreview_pleasepwd">Please input password</string>
    <string name="securitymonitor_monitorpreview_submit">submit</string>
    <string name="securitymonitor_monitorpreview">Monitor the preview</string>
    <string name="securitymonitor_videoplay">Video playback</string>


    <!-- xlistview -->
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_click">点击载入更多</string>


     <!-- jazzyviewpager -->
	<string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>

	<string name="about_msg">Serial Port API sample v1.1\n
\n
This program is the sample application provided with project android-serialport-api.\n
\n
More information and bug report on [http://code.google.com/p/android-serialport-api]\n
\n
Copyright 2010-2011 Cedric Priscal\n
\n
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n
\n
http://www.apache.org/licenses/LICENSE-2.0\n
\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.\n</string>
    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial
		port.</string>


<string name="controlcenter_mainmenu_light">Light</string>
    <string name="controlcenter_mainmenu_curtain">Curtain</string>
    <string name="controlcenter_mainmenu_ac">A.C</string>
    <string name="controlcenter_mainmenu_cinemal">Cinema</string>
    <string name="controlcenter_mainmenu_bgmusic">Music</string>
    <string name="controlcenter_mainmenu_scene">Scene</string>
    <string name="controlcenter_mainmenu_monitor">Monitor</string>
    <string name="controlcenter_mainmenu_setup">Setup</string>
    <string name="controlcenter_add_new">Add new</string>
    <string name="add_curtain_name">input new device name</string>
    <string name="add_curtain_type">set device type</string>

    <string name="add_curtain_ok">create success</string>
    <string name="name_have_exist">name have been used</string>
    <string name="curtain">curtain:</string>
    <string name="delete_success">delete success</string>
    <string name="target_not_exist">target not exist</string>
    <string name="adj_temp">adjust temperature</string>
    <string name="indoor_temp">current temperature</string>
    <string name="set_temp">preset temperature</string>
    <string name="address_setup">Address setup</string>
    <string name="pwd_set">pwd replace</string>
    <string name="modeselection_set">Mode selection</string>
    <string name="room">The sitting room</string>
    <string name="executedimmediately">Executed immediately</string>
    <string name="subscribe">To make an appointment</string>
    <string name="to">to</string>

    <string name="show_set">show</string>
    <string name="controlcenter_mainmenu_WirelessandInternet">Wireless and Internet</string>
    <string name="wifi_setup">Wi-Fi</string>
    <string name="bluetooth_setup">bluetooth</string>
    <string name="more_setup">more...</string>
    <string name="controlcenter_mainmenu_equipment">equipment</string>
    <string name="controlcenter_mainmenu_personal">personal</string>
    <string name="controlcenter_mainmenu_system">system</string>
    <string name="language_set">language</string>
    <string name="aboutdevice_set">about device</string>
    <string name="systemupdate_set">system update</string>
    <string name="legalinformation_set">legal information</string>
    <string name="modelnumber_set">model number</string>
    <string name="androidversion_set">android version</string>
    <string name="firmwareversion_set">Firmware Version</string>
    <string name="kernelversion_set">Kernel version</string>
    <string name="versionnumber_set">version number</string>
    <string name="companyinformation_set">company information</string>
    <string name="videostar_set">GVS</string>
    <string name="videostarwebsite_set">http://www.video-star.com.cn/</string>


    <string name="wifi_systemset">wireless network</string>

    <string name="securitymonitor_videoplay_allyear">allyear</string>
    <string name="securitymonitor_videoplay_2016">2016</string>
    <string name="securitymonitor_videoplay_2015">2015</string>
    <string name="securitymonitor_videoplay_2014">2014</string>
    <string name="securitymonitor_videoplay_2013">2013</string>
    <string name="securitymonitor_videoplay_2012">2012</string>
    <string name="securitymonitor_videoplay_2011">2011</string>
    <string name="securitymonitor_videoplay_allmonth">allmonth</string>
    <string name="securitymonitor_videoplay_1">1月</string>
    <string name="securitymonitor_videoplay_2">2月</string>
    <string name="securitymonitor_videoplay_3">3月</string>
    <string name="securitymonitor_videoplay_4">4月</string>
    <string name="securitymonitor_videoplay_5">5月</string>
    <string name="securitymonitor_videoplay_6">6月</string>
    <string name="securitymonitor_videoplay_7">7月</string>
    <string name="securitymonitor_videoplay_8">8月</string>
    <string name="securitymonitor_videoplay_9">9月</string>
    <string name="securitymonitor_videoplay_10">10月</string>
    <string name="securitymonitor_videoplay_11">11月</string>
    <string name="securitymonitor_videoplay_12">12月</string>
    <string name="update_device_data">update device data</string>
    <string name="create_device_data">create device data</string>

</resources>
