<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_wifi_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        style="@style/Stylelight_blue"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line_hor_blue_5_dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/txt_label_signal_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signal_strength"
            	style="@style/app_titleStyle" />

            <TextView
                android:id="@+id/txt_signal_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signal_strength"
            	style="@style/app_titleStyle"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_label_security_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/security_level"
            	style="@style/app_titleStyle" />

            <TextView
                android:id="@+id/txt_security_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/security_level"
            	style="@style/app_titleStyle"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password"
            	style="@style/app_titleStyle" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
            	style="@style/app_titleStyle" />

            <CheckBox
                android:id="@+id/cbx_show_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/show_password"
            	style="@style/app_titleStyle" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line_hor_black_2_dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_transparent_yellow"
            android:clickable="true"
            android:enabled="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            style="@style/app_titleStyle" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/line_ver_black_1_dp" />

        <TextView
            android:id="@+id/txt_btn_connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_transparent_yellow"
            android:clickable="true"
            android:enabled="true"
            android:gravity="center"
            android:padding="10dp"
            style="@style/app_titleStyle"
            android:text="@string/connect" />
    </LinearLayout>

</LinearLayout>