<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="all"
    android:background="@color/app_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.gvs.controlpanel.widget.Header
        android:id="@+id/activity_addmonitorpreview_header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
    	android:background="@color/black"
        android:orientation="vertical" />

    <com.gvs.controlpanel.widget.BounceScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_addmonitorpreview_header" >

	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

		    <ImageView
		        android:id="@+id/activity_addmonitorpreview_logoiv"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:layout_below="@+id/header"
		        android:src="@drawable/btn_monitorpreview_logo" />

		    <RelativeLayout
		        android:id="@+id/activity_addmonitorpreview_devicenamerl"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:layout_marginLeft="300dp"
		        android:minHeight="80dp"
		        android:layout_below="@+id/logoiv" >

		        <TextView
		        	android:id="@+id/activity_addmonitorpreview_devicenametv"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerVertical="true"
		            android:layout_marginLeft="40dp"
			        style="@style/app_titleStyle2"
		            android:text="@string/securitymonitor_monitorpreview_name" />

		        <EditText
			        android:id="@+id/activity_addmonitorpreview_devicenameet"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_toRightOf="@+id/devicenametv"
		            android:layout_centerVertical="true"
		            android:gravity="center_vertical"
			        android:paddingLeft="10dp"
			        style="@style/app_big_textStyle2"
			        android:background="@drawable/btn_monitorpreview_srk"
			        android:focusable="true"
			        android:minHeight="80dp"
			        android:maxLength="10"
			        android:inputType="text"
			        android:focusableInTouchMode="true"
				    android:textColorHint="@color/Translucent_gray"
				    android:hint="@string/securitymonitor_monitorpreview_pleasename"
			        android:singleLine="true" />

		    </RelativeLayout>

		    <RelativeLayout
		        android:id="@+id/activity_addmonitorpreview_deviceidrl"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:minHeight="80dp"
		        android:layout_marginLeft="300dp"
		        android:layout_below="@+id/devicenamerl" >

		        <TextView
		        	android:id="@+id/activity_addmonitorpreview_deviceidtv"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerVertical="true"
		            android:layout_marginLeft="40dp"
			        style="@style/app_titleStyle2"
		            android:text="@string/securitymonitor_monitorpreview_id" />

		        <EditText
			        android:id="@+id/activity_addmonitorpreview_deviceidet"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_toRightOf="@+id/deviceidtv"
		            android:layout_centerVertical="true"
		            android:gravity="center_vertical"
			        android:paddingLeft="10dp"
			        style="@style/app_big_textStyle2"
			        android:background="@drawable/btn_monitorpreview_srk"
			        android:focusable="true"
			        android:maxLength="20"
			        android:minHeight="80dp"
			        android:inputType="text"
			        android:focusableInTouchMode="true"
				    android:textColorHint="@color/Translucent_gray"
				    android:hint="@string/securitymonitor_monitorpreview_pleaseid"
			        android:singleLine="true" />

		    </RelativeLayout>

		    <RelativeLayout
		        android:id="@+id/activity_addmonitorpreview_devicepwdrl"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:minHeight="80dp"
		        android:layout_marginLeft="300dp"
		        android:layout_below="@+id/deviceidrl" >

		        <TextView
		        	android:id="@+id/activity_addmonitorpreview_devicepwdtv"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerVertical="true"
		            android:layout_marginLeft="40dp"
			        style="@style/app_titleStyle2"
		            android:text="@string/securitymonitor_monitorpreview_pwd" />

		        <EditText
			        android:id="@+id/activity_addmonitorpreview_devicepwdet"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_toRightOf="@+id/devicepwdtv"
		            android:layout_centerVertical="true"
		            android:gravity="center_vertical"
			        android:paddingLeft="10dp"
			        android:background="@drawable/btn_monitorpreview_srk"
			        style="@style/app_big_textStyle2"
			        android:focusable="true"
			        android:maxLength="10"
			        android:minHeight="80dp"
			        android:inputType="textPassword"
			        android:focusableInTouchMode="true"
				    android:textColorHint="@color/Translucent_gray"
				    android:hint="@string/securitymonitor_monitorpreview_pleasepwd"
			        android:singleLine="true" />

		        <ImageView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentRight="true"
		            android:layout_marginRight="380dp"
		            android:src="@drawable/btn_monitorpreview_guanpwd" />

		    </RelativeLayout>

		    <Button
		        android:id="@+id/activity_addmonitorpreview_tjbtn"
		        android:layout_width="500dp"
		        android:layout_height="120dp"
		        android:layout_marginLeft="315dp"
		        android:layout_marginRight="120dp"
		        android:layout_marginTop="40dp"
		        android:layout_below="@+id/devicepwdrl"
		        android:layout_alignParentBottom="true"
			    style="@style/app_titleStyle2"
		        android:gravity="center"
		        android:background="@drawable/monitorpreview_btn_"
		        android:text="@string/securitymonitor_monitorpreview_submit" />

	    </RelativeLayout>

    </com.gvs.controlpanel.widget.BounceScrollView>

</RelativeLayout>