<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="60dp"
        android:visibility="gone"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/namecb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:button="@drawable/btn_check_state" />

        <ImageView
            android:id="@+id/nameiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/nametv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            style="@style/Style5"
            android:gravity="center_vertical" />

        <RadioButton
	        android:id="@+id/offrb"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical"
        	android:button="@drawable/btn_check_state2"
	       	android:layout_marginLeft="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            style="@style/Style5"
            android:text="@string/off" />

        <RadioButton
	        android:id="@+id/onrb"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
        	android:button="@drawable/btn_check_state2"
	        android:gravity="center_vertical"
	       	android:layout_marginLeft="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Style5"
            android:layout_marginLeft="10dp"
            android:text="@string/open" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
		        android:clickable="false"
		        android:focusable="false"
		        android:text="@string/executedimmediately"
            	style="@style/Style5"
        		android:button="@drawable/btn_check_state2"
		        android:focusableInTouchMode="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
		        android:clickable="false"
		        android:focusable="false"
		        android:text="@string/subscribe"
            	style="@style/Style5"
            	android:layout_marginTop="20dp"
        		android:button="@drawable/btn_check_state2"
		        android:focusableInTouchMode="false" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >
	        <EditText
		        android:id="@+id/nameet"
		        android:layout_width="80dp"
		        android:layout_height="80dp"
		        android:layout_marginLeft="20dp"
		        android:gravity="center_vertical"
		        android:layout_gravity="center"
		        android:paddingLeft="10dp"
		        style="@style/app_titleStyle1"
		        android:focusable="true"
		        android:maxLength="10"
		        android:inputType="text"
		        android:focusableInTouchMode="true"
			    android:background="@drawable/btn_scene_srk"
			    android:textColorHint="@color/Translucent_gray"
		        android:singleLine="true" />

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center_vertical"
	            android:layout_gravity="center_vertical"
	            android:layout_marginLeft="10dp"
	            style="@style/Style6"
	            android:text="@string/to" />

	        <EditText
		        android:id="@+id/nameet2"
		        android:layout_width="80dp"
		        android:layout_height="80dp"
		        android:layout_marginLeft="20dp"
		        android:gravity="center_vertical"
		        android:layout_gravity="center"
		        android:paddingLeft="10dp"
		        style="@style/app_titleStyle1"
		        android:focusable="true"
		        android:maxLength="10"
		        android:inputType="text"
		        android:focusableInTouchMode="true"
			    android:background="@drawable/btn_scene_srk"
			    android:textColorHint="@color/Translucent_gray"
		        android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>